--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>nnform</artifactId>
+	<artifactId>epoint</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>nnform</name>
+	<name>epoint</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -38,7 +38,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -57,10 +56,13 @@
 		</dependency>
 
 		<!-- JSTL for JSP -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-		</dependency>
+		
+<dependency>
+  <groupId>javax.servlet</groupId>
+  <artifactId>jstl</artifactId>
+  </dependency>
+
+
 
 		<!-- Need this to compile JSP -->
 		<dependency>
